--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://www.ulynks.io/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'uLynks'
 theme = 'ulynks'
