--- a/themes/ulynks/hugo.toml
+++ b/themes/ulynks/hugo.toml
@@ -10,7 +10,7 @@ weight = 1
 
 [[menus.main]]
 name = 'About us'
-pageRef = '/aboutus'
+pageRef = '/about-us'
 weight = 2
 
 [[menus.main]]
@@ -25,7 +25,7 @@ weight = 4
 
 [[menus.main]]
 name = 'Contact us'
-pageRef = '/contactus'
+pageRef = '/contact-us'
 weight = 5
 
 [module]
