--- a/package.json
+++ b/package.json
@@ -28,25 +28,26 @@
   },
   "homepage": "https://github.com/ulynks/www#readme",
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "autoprefixer": "^10.4.17",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "autoprefixer": "^10.4.18",
     "babel-loader": "^9.1.3",
     "core-js": "^3.36.0",
     "css-loader": "^6.10.0",
     "css-minimizer-webpack-plugin": "^6.0.0",
     "depcheck": "^1.4.7",
-    "mini-css-extract-plugin": "^2.8.0",
+    "mini-css-extract-plugin": "^2.8.1",
     "npm-run-all": "^4.1.5",
-    "postcss-loader": "^8.1.0",
+    "postcss": "^8.4.35",
+    "postcss-loader": "^8.1.1",
     "sass": "^1.71.1",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@fontsource/poppins": "^5.0.8",
+    "@fontsource/poppins": "^5.0.12",
     "@primer/css": "^21.2.0",
     "jquery": "^3.7.1"
   },
-  "packageManager": "yarn@4.1.0"
+  "packageManager": "yarn@4.1.1"
 }
