--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,7 +25,7 @@
     },
     {
       "label": "yarn",
-      "command": "yarn run update",
+      "command": "npm run yarn-update",
       "detail": "Upgrade package.json."
     },
   ]
