--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:webpack": "webpack --mode=production",
     "dev:webpack": "webpack --mode=development --watch",
     "sass": "sass --load-path=node_modules/ --no-source-map themes/ulynks/assets/scss/app.scss themes/ulynks/assets/css/app.css --style=compressed",
-    "update": "yarn up && yarn npm audit && npx depcheck --detailed"
+    "yarn-update": "yarn set version stable && yarn install && yarn up && yarn npm audit && npx depcheck --detailed"
   },
   "repository": {
     "type": "git",
