--- a/themes/ulynks/theme.toml
+++ b/themes/ulynks/theme.toml
@@ -1,4 +1,4 @@
-name = 'ulynks'
+name = 'uLynks'
 license = 'EUPL-1.2'
 licenselink = 'https://github.com/ulynks/www/LICENSE'
 description = 'Growing on Fyn, Denmark 🇩🇰'
