--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:webpack": "webpack --mode=production",
     "dev:webpack": "webpack --mode=development --watch",
     "sass": "sass --load-path=node_modules/ --no-source-map themes/ulynks/assets/scss/app.scss themes/ulynks/assets/css/app.css --style=compressed",
-    "vendor": "cp -pv node_modules/bootstrap/dist/js/bootstrap.bundle.min.js static/vendor/bootstrap.bundle.min.js & cp -pv node_modules/jquery/dist/jquery.min.js static/vendor/jquery.min.js",
+    "vendor": ".bash/vendor.sh",
     "yarn-update": "yarn set version stable && yarn install && yarn up && yarn npm audit && npx depcheck --detailed && yarn upgrade-interactive"
   },
   "repository": {
