--- a/package.json
+++ b/package.json
@@ -1,34 +1,17 @@
 {
-  "name": "uLynks",
-  "description": "Growing on Fyn, Denmark 🇩🇰",
-  "main": "index.js",
-  "private": true,
-  "browserslist": "> 1%",
-  "scripts": {
-    "assets": "(yarn run sass & yarn run vendor) && yarn run start:webpack",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "run-p 'start:*'",
-    "start:hugo": "hugo version && hugo server --buildDrafts",
-    "start:webpack": "webpack --mode=production",
-    "build": "run-s build:webpack build:hugo",
-    "build:hugo": "hugo",
-    "build:webpack": "webpack --mode=production",
-    "dev:webpack": "webpack --mode=development --watch",
-    "sass": "sass --load-path=node_modules/ --no-source-map themes/ulynks/assets/scss/app.scss themes/ulynks/assets/css/app.css --style=compressed",
-    "vendor": ".bash/vendor.sh",
-    "yarn-update": "yarn set version stable && yarn install && yarn up && yarn npm audit && ( npx depcheck --detailed ) || : && yarn upgrade-interactive"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ulynks/www.git"
-  },
-  "keywords": [],
   "author": "@JV-conseil",
-  "license": "EUPL-1.2",
+  "browserslist": "> 1%",
   "bugs": {
     "url": "https://github.com/ulynks/www/issues"
   },
-  "homepage": "https://github.com/ulynks/www#readme",
+  "dependencies": {
+    "@fontsource/poppins": "^5.0.12",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "jquery": "^3.7.1"
+  },
+  "description": "Growing on Fyn, Denmark 🇩🇰",
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
@@ -46,12 +29,29 @@
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   },
-  "dependencies": {
-    "@fontsource/poppins": "^5.0.12",
-    "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
-    "jquery": "^3.7.1"
+  "homepage": "https://github.com/ulynks/www#readme",
+  "keywords": [],
+  "license": "EUPL-1.2",
+  "main": "index.js",
+  "name": "uLynks",
+  "packageManager": "yarn@4.1.1",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ulynks/www.git"
   },
-  "packageManager": "yarn@4.1.1"
+  "scripts": {
+    "assets": "(yarn run sass & yarn run vendor) && yarn run start:webpack",
+    "build": "run-s build:webpack build:hugo",
+    "build:hugo": "hugo",
+    "build:webpack": "webpack --mode=production",
+    "dev:webpack": "webpack --mode=development --watch",
+    "sass": "sass --load-path=node_modules/ --no-source-map themes/ulynks/assets/scss/app.scss themes/ulynks/assets/css/app.css --style=compressed",
+    "start": "run-p 'start:*'",
+    "start:hugo": "hugo version && hugo server --buildDrafts",
+    "start:webpack": "webpack --mode=production",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "vendor": ".bash/vendor.sh",
+    "yarn-update": "yarn set version stable && yarn install && yarn up && yarn npm audit && ( npx depcheck --detailed ) || : && yarn upgrade-interactive"
+  }
 }
