--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,20 @@
-/.yarn/**            linguist-vendored
-/.yarn/releases/*    binary
-/.yarn/plugins/**/*  binary
-/.pnp.*              binary linguist-generated
+# Configuring Git Large File Storage
+#
+# brew install git-lfs
+# git lfs install
+# git lfs track {"*.svg","*.gif","*.jpg","*.png"}
+#
+# Documentation
+# ------------
+# - https://git-scm.com/docs/gitattributes
+# - https://docs.github.com/fr/repositories/working-with-files/managing-large-files/configuring-git-large-file-storage
+# - https://confluence.atlassian.com/bbkb/add-commonly-used-binaries-to-git-lfs-1188409676.html
+#
+/.yarn/** linguist-vendored
+/.yarn/releases/* binary
+/.yarn/plugins/**/* binary
+/.pnp.* binary linguist-generated
+*.svg filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
