--- a/.gitattributes
+++ b/.gitattributes
@@ -14,7 +14,7 @@
 /.yarn/releases/* binary
 /.yarn/plugins/**/* binary
 /.pnp.* binary linguist-generated
-# *.svg filter=lfs diff=lfs merge=lfs -text
-# *.gif filter=lfs diff=lfs merge=lfs -text
-# *.jpg filter=lfs diff=lfs merge=lfs -text
-# *.png filter=lfs diff=lfs merge=lfs -text
+*.svg filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
