--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,7 @@
 #
 # brew install git-lfs
 # git lfs install
-# git lfs track {"*.svg","*.gif","*.jpg","*.png"}
+# git lfs track {"*.gif","*.jpg","*.pdf","*.png","*.svg",}
 #
 # Documentation
 # ------------
@@ -18,3 +18,4 @@
 *.gif filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
