--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "dompurify": "^3.0.11",
     "jquery": "^3.7.1"
   },
   "description": "Growing on Fyn, Denmark 🇩🇰",
