--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,7 @@
 #
 # brew install git-lfs
 # git lfs install
-# git lfs track {"*.gif","*.jpg","*.pdf","*.png","*.svg"}
+# git lfs track {"*.eot","*.ico","*.gif","*.jpg","*.pdf","*.png","*.ttf","*.svg","*.woff","*.woff2"}
 #
 # Documentation
 # ------------
