ulynks/docs#24 Open Graph Protocol (OGP)

--- a/hugo.toml
+++ b/hugo.toml
@@ -29,6 +29,7 @@ pluralizeListTitles = false
 
 [params]
   subtitle = 'Growing on Fyn, Denmark 🇩🇰'
+  image = 'logo/dark/ulynks-logo-horizontal.png'
   umami = '3cf42fbf-5ff7-4ba7-b4d1-607641c5b4e8'
   mainWebsite = 'https://www.ulynks.io/'
   [params.contact]
