ulynks/docs#24 Open Graph Protocol (OGP)
LinkedIn used the value from the provided Open Graph tag on the page.

see: https://www.linkedin.com/post-inspector/inspect/https:%2F%2Fwww.ulynks.io

--- a/hugo.toml
+++ b/hugo.toml
@@ -16,7 +16,7 @@ pluralizeListTitles = false
   [server.headers.values]
     Content-Security-Policy = """
     default-src 'self';
-    connect-src 'self' https://eu.umami.is;
+    connect-src 'self' https://eu.umami.is https://api-gateway.umami.dev;
     font-src 'self' https://fonts.gstatic.com;
     img-src 'self' https://*;
     script-src 'self' https://eu.umami.is;
