--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "url": "https://github.com/ulynks/www/issues"
   },
   "dependencies": {
-    "@fontsource/poppins": "^5.0.14",
+    "@fontsource/poppins": "^5.0.15",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -14,18 +14,19 @@
   },
   "description": "Growing on Fyn, Denmark 🇩🇰",
   "devDependencies": {
-    "@babel/core": "^7.24.8",
-    "@babel/preset-env": "^7.24.8",
-    "autoprefixer": "^10.4.19",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "braces": "^3.0.3",
-    "core-js": "^3.37.1",
+    "core-js": "^3.38.1",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "depcheck": "^1.4.7",
-    "mini-css-extract-plugin": "^2.9.0",
+    "mini-css-extract-plugin": "^2.9.1",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.39",
+    "postcss": "^8.4.41",
     "postcss-loader": "^8.1.1",
     "sass": "^1.77.8",
     "webpack": "^5.93.0",
@@ -36,7 +37,7 @@
   "license": "EUPL-1.2",
   "main": "index.js",
   "name": "uLynks",
-  "packageManager": "yarn@4.3.1",
+  "packageManager": "yarn@4.4.0",
   "private": true,
   "repository": {
     "type": "git",
