--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "coi-serviceworker": "^0.1.7",
     "dompurify": "^3.2.3",
     "jquery": "^3.7.1"
   },
