--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -68,7 +68,7 @@ jobs:
 
       - name: Upload artifact
         # uses: actions/upload-pages-artifact@v2
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-pages-artifact@v4
         with:
           path: ./public
 
