--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "coi-serviceworker": "^0.1.7",
     "dompurify": "^3.2.4",
     "jquery": "^3.7.1"
   },
   "description": "Growing on Fyn, Denmark 🇩🇰",
   "devDependencies": {
-    "@babel/core": "^7.26.9",
+    "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "braces": "^3.0.3",
     "core-js": "^3.41.0",
     "css-loader": "^7.1.2",
-    "css-minimizer-webpack-plugin": "^7.0.0",
+    "css-minimizer-webpack-plugin": "^7.0.2",
     "depcheck": "^1.4.7",
     "mini-css-extract-plugin": "^2.9.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
-    "sass": "^1.85.1",
+    "sass": "^1.86.0",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
   },
@@ -51,7 +52,7 @@
     "dev:webpack": "webpack --mode=development --watch",
     "sass": "sass --load-path=node_modules/ --no-source-map themes/ulynks/assets/scss/app.scss themes/ulynks/assets/css/app.css --style=compressed",
     "start": "run-p 'start:*'",
-    "start:hugo": "hugo version && hugo server --buildDrafts",
+    "start:hugo": "hugo version && hugo server --gc --minify",
     "start:webpack": "webpack --mode=production",
     "start:firefox": "open -na /Applications/Firefox.app --args '--private-window' 'http://localhost:1313/'",
     "test": "echo \"Error: no test specified\" && exit 1",
