ulynks/docs#46 dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,4 +9,5 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
-    target-branch: ["bootstrap", "dev", "@primer-css"]
+    # target-branch: ["bootstrap", "dev", "@primer-css"]
+    target-branch: ["bootstrap"]
