--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,23 +15,11 @@
   "editor.formatOnSave": true,
   "editor.matchBrackets": "always",
   "editor.wordWrap": "on",
-  "emmet.includeLanguages": {
-    "django-html": "html"
-  },
   "files.associations": {
-    "**/requirements{/**,*}.{txt,in}": "pip-requirements",
-    "**/templates/*": "django-txt",
-    "**/templates/*.html": "django-html",
     "*.html": "html"
   },
   "files.exclude": {
-    "**/*.pyc": {
-      "when": "$(basename).py"
-    },
-    "**/__pycache__": true,
-    "**/lib": true,
-    "**/node_modules/**": true,
-    "cache/**/joblib": true
+    "**/node_modules/**": true
   },
   "html.format.indentHandlebars": true,
   "html.format.indentInnerHtml": true,
@@ -39,22 +27,6 @@
   "html.format.unformatted": "",
   "html.format.unformattedContentDelimiter": "<!-- html-format-ignore -->",
   "javascript.preferences.quoteStyle": "double",
-  "shellcheck.logLevel": "trace",
-  "shellformat.effectLanguages": [
-    "shellscript",
-    "dockerfile",
-    "dotenv",
-    "hosts",
-    "jvmoptions",
-    "ignore",
-    "gitignore",
-    "properties",
-    "spring-boot-properties",
-    "azcli",
-    "bats"
-  ],
-  "shellformat.path": "/opt/homebrew/bin/shfmt",
-  "shellformat.useEditorConfig": true,
   "task.allowAutomaticTasks": "on",
   "terminal.integrated.defaultProfile.linux": "bash",
   "terminal.integrated.defaultProfile.osx": "bash",
