--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,4 +10,4 @@ updates:
     schedule:
       interval: "weekly"
     # target-branch: ["bootstrap", "dev", "@primer-css"]
-    target-branch: ["bootstrap"]
+    target-branch: "bootstrap"
